--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "y",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "homepage" : "yieldr.com",
   "author" : {
     "name" : "Alex Kalyvitis"
@@ -12,8 +12,9 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch" : "~0.4.4",
+    "grunt-mocha"         : "~0.4.11",
     "matchdep"            : "~0.1.2",
-    "grunt-mocha-test"    : "~0.7.0",
-    "phantom"             : "~0.6.5"
+    "mocha"               : "~1.21.4",
+    "chai"                : "~1.9.1"
   }
 }
