--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "y",
-  "version": "0.7.1-n",
+  "version": "0.7.1",
   "homepage" : "yieldr.com",
   "author" : {
     "name" : "Alex Kalyvitis"
