--- a/.jshintrc
+++ b/.jshintrc
@@ -1,10 +1,11 @@
 {
     "node": true,
     "esnext": true,
-    "bitwise": true,
+    "bitwise": false,
     "camelcase": false,
     "curly": true,
     "eqeqeq": true,
+    "eqnull": true,
     "immed": true,
     "indent": 4,
     "latedef": true,
