incorporating browserstack into our testing

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-mocha"         : "~0.4.11",
     "matchdep"            : "~0.1.2",
     "mocha"               : "~1.21.4",
-    "chai"                : "~1.9.1"
+    "chai"                : "~1.9.1",
+    "browserstack-runner" : "~0.3.1"
   }
 }
