--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "y",
-  "version": "0.9.1-n",
-  "homepage" : "yieldr.com",
-  "author" : {
-    "name" : "Alex Kalyvitis"
+  "version": "1.0.0-n",
+  "homepage": "yieldr.com",
+  "author": {
+    "name": "Alex Kalyvitis"
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt"               : "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch" : "~0.4.4",
-    "grunt-mocha"         : "~0.4.11",
-    "matchdep"            : "~0.1.2",
-    "mocha"               : "~1.21.4",
-    "chai"                : "~1.9.1"
+    "grunt"                : "~0.4.5",
+    "grunt-contrib-concat" : "~0.5.1",
+    "grunt-contrib-connect": "~0.10.1",
+    "grunt-contrib-jshint" : "~0.11.2",
+    "grunt-contrib-uglify" : "~0.9.1",
+    "grunt-contrib-watch"  : "~0.6.1",
+    "grunt-mocha"          : "~0.4.12",
+    "grunt-saucelabs"      : "~8.6.1",
+    "matchdep"             : "~0.1.2",
+    "mocha"                : "~1.21.4",
+    "expect.js"            : "~0.3.1"
   }
 }
