--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
   "name": "y",
-  "version": "1.0.5",
-  "homepage": "yieldr.com",
-  "author": {
-    "name": "Alex Kalyvitis"
+  "version": "2.0.0-alpha.1",
+  "homepage": "http://yieldr.com",
+  "license": "MIT",
+  "author": "Alex Kalyvitis <alex.kalyvitis@yieldr.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yieldr/y.js.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "es5-shim": "^4.1.7",
+    "underscore": "^1.8.3"
+  },
   "devDependencies": {
-    "grunt"                : "~0.4.5",
-    "grunt-contrib-concat" : "~0.5.1",
+    "expect.js": "~0.3.1",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.8.0",
+    "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.10.1",
-    "grunt-contrib-jshint" : "~0.11.2",
-    "grunt-contrib-uglify" : "~0.9.1",
-    "grunt-contrib-watch"  : "~0.6.1",
-    "grunt-mocha"          : "~0.4.12",
-    "grunt-saucelabs"      : "~8.6.1",
-    "matchdep"             : "~0.1.2",
-    "mocha"                : "~1.21.4",
-    "expect.js"            : "~0.3.1"
+    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-uglify": "~0.9.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-jsdoc": "^0.6.7",
+    "grunt-mocha": "~0.4.12",
+    "grunt-saucelabs": "~8.6.1",
+    "matchdep": "~0.1.2",
+    "mocha": "~1.21.4"
   }
 }
