--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-jsdoc": "^0.6.7",
     "grunt-mocha": "~0.4.12",
+    "grunt-mocha-test": "^0.12.7",
     "grunt-saucelabs": "~8.6.1",
     "matchdep": "~0.1.2",
-    "mocha": "~1.21.4"
+    "mocha": "~1.21.4",
+    "mochify": "^2.10.1"
   }
 }
