--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "y",
-  "version": "1.2.0-n",
+  "version": "1.2.0",
   "author": "Alex Kalyvitis <alex.kalyvitis@yieldr.com>",
   "license": "MIT",
   "homepage": "http://github.com/yieldr/y.js",
